Basic setup of flow as per Monitoring video.
By NiFi Registry user: anonymous

--- a/Bucket-1/bucket.yml
+++ b/Bucket-1/bucket.yml
@@ -1,5 +1,6 @@
 flows:
-  e942c3d9-e7d8-43bd-ba18-4276de8e540d: {ver: 1, file: Flow-1_(ABCD).snapshot, comments: '',
-    author: anonymous, created: 1692014498155, flowName: Flow-1 (ABCD), flowDesc: ''}
+  e942c3d9-e7d8-43bd-ba18-4276de8e540d: {ver: 2, file: Flow-1_(ABCD).snapshot, comments: Basic
+      setup of flow as per Monitoring video., author: anonymous, created: 1692087623732,
+    flowName: Flow-1 (ABCD), flowDesc: ''}
 layoutVer: 1
 bucketId: c38fe08f-0c49-4507-9d07-e74a25439799
